--- a/server/admin.html
+++ b/server/admin.html
@@ -1,6 +1,14 @@
 <html><body>
     <div>
         <div>ADMIN ACCESS</div>
-        <button onclick="window.location.href='/restart'" >UPDATE & RESTART</button>
+        <div>
+            <ul>
+                <li><button onclick="window.location.href='/restart'" >UPDATE & RESTART<br/>Update source code and dependencies then re-boot the server process</button></li>
+                <li></li>
+                <li></li>
+                <li><button onclick="window.location.href='/stop'" >STOP GAME SERVER</br>(cannot be reversed without launching the server manually)</button></li>
+            </ul>
+            
+        </div>
     </div>    
 </body></html>
