Added a link in the admin page to get back to the main page.

--- a/server/admin.html
+++ b/server/admin.html
@@ -1,6 +1,7 @@
 <html><body>
     <div>
         <div>ADMIN ACCESS</div>
+        <div style='position:absolute; top:8px; right:8px;'> <a href='/'>back to game</a> </div>
         <div>
             <ul>
                 <li><button onclick="window.location.href='/restart'" >UPDATE & RESTART<br/>Update source code and dependencies then re-boot the server process</button></li>
