--- a/server/admin.html
+++ b/server/admin.html
@@ -1,6 +1,6 @@
 <html><body>
     <div>
-        <div>ADMIN ACCESS</div>
+        <div>SERVER ADMIN</div>
         <div style='position:absolute; top:8px; right:8px;'> <a href='/'>back to game</a> </div>
         <div>
             <ul>
