Html pages can be templates, injecting data before serving - replaced index page by a template.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        KIKOO LOL
-    </body>
-</html>
+<html><body>
+    <div>This is klaim\'s multiplayer js game prototype, yay! Access = {{access_counter}}, cycle = {{cycle}}</div>
+    <div style='position:absolute; top:8px; right:8px;'> <a href='/admin'>admin access</a> </div>
+</body></html>
