--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html><body>
-    <div>This is klaim\'s multiplayer js game prototype, yay! Access = {{access_counter}}, cycle = {{cycle}}</div>
+    <div>This is klaim's multiplayer js game prototype, yay! Access = {{access_counter}}, cycle = {{cycle}}</div>
     <div style='position:absolute; top:8px; right:8px;'> <a href='/admin'>admin access</a> </div>
 </body></html>
