Added clarification in web page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div><strong>This is klaim's multiplayer js game prototype, yay!</strong></div>
     <br/>
     <div id="online_info" style="display: none;">
-        Online Status for This Server:
+        Online Status for This Server (when this page was received):
         <ul>
             <li>Access count since last reboot = {{access_counter}} (on cycle = {{cycle}})</li>
             <li>Number of people connected: {{client_count}}</li>
