--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </ul>
     </div>
     <div>
-        Server: <input id="server_url" type="text" style="width: 400px"></input>
-        <button onclick="field.reset_server_url();">Reset</button>
-        <button onclick="client.connect_to_server(field.server_url.value);">Play Online</button>
+        Server: <input id="server_hostname" type="text" style="width: 300px"></input>
+        <button onclick="field.reset_server_hostname();">Reset</button>
+        <button onclick="client.connect_to_server(field.server_hostname.value);">Play Online</button>
         
     </div>
 
