--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 <body style="background-color:whitesmoke">
     <div><h2>This is klaim's multiplayer js game prototype, yay!</h2></div>
-    <div id="online_info" style="display: none; position:absolute; top:8px; right:8px; max-width: 300px; background-color: honeydew"">
+    <div id="online_info" style="display: none; position:absolute; top:8px; right:8px; max-width: 300px; background-color: honeydew">
         <div id="online_info_box" style="display:none;">
             <div style="float: right"> <a href='/admin'>admin access</a> </div>
             <div style="float: left"> 
@@ -22,8 +22,8 @@
             <button onclick="open_info_box();">open server box</button> 
         </div>        
     </div>
-    <div id="connection_status_panel" style="background-color: darkslategrey; color:orangered;">
-        Status: Not Connected Yet.
+    <div id="connection_status_panel" style="background-color: darkslategrey; color:orangered; width:300px; float:right; text-align: left;">
+        <div>Status: Not Connected Yet.</div>
     </div>
     <br/>
     <div>
