Game state and update code is in code, used by server.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </div>    
         
 </body>
+<script src="./core/game.js" ></script>
 <script src="./client/main.js" ></script>
 <script>{{server_code}}</script>
 </html>
