Added clarifications on admin buttons.

--- a/server/admin.html
+++ b/server/admin.html
@@ -4,7 +4,11 @@
         <div style='position:absolute; top:8px; right:8px;'> <a href='/'>back to game</a> </div>
         <div>
             <ul>
-                <li><button onclick="window.location.href='/restart'" >UPDATE & RESTART<br/>Update source code and dependencies then re-boot the server.</button></li>
+                <li><button onclick="window.location.href='/restart'" >
+                    UPDATE & RESTART
+                    <br/>Update source code and dependencies then re-boot the server.
+                    <br/>(beware: will fail if the server CLI args have to change)
+                </button></li>
                 <li><button onclick="window.location.href='/quick-restart'" >RESTART<br/>Re-boot the server without updating the source code.</button></li>
                 <li></li>
                 <li></li>
