Basic login protocol and behavior to check basic exchanges.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <button id="button_server_reset">Reset</button>     
             </div>
             <div>
+                Login: <input id="player_login" type="text" style="width: 300px"></input>
+            </div>
+            <div>
                 <button id="button_play_online" ><h3>Play Online</h3>Play with other players on a remote or LAN server.</button>   
                 <button id="button_play_offline"><h3>Play Offline</h3>Play solo with no need for any server.</button>
             </div>
