--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             </div>
         </div>
         <div id="game_panel" style="display: none; width:640px; height: 480px; background-color: green;">
-            <textarea id="chat_display">
-
-            </textarea>
+            <canvas id="game_canvas" style="width: 100%; height: 100%;"></canvas>
+            <div id="chat_display">
+                <input id="chat_input" type="text"></input>
+                <button id="chat_send_button"></button> 
+            </div>
         </div>
     </div>    
         
