--- a/server/admin.html
+++ b/server/admin.html
@@ -1,6 +1,7 @@
 <html><body>
     <div>
-        <div>SERVER ADMIN</div>
+        <div><h1>SERVER ADMIN</h1></div>
+        <div>TODO: add some live stats here</div>
         <div style='position:absolute; top:8px; right:8px;'> <a href='/'>back to game</a> </div>
         <div>
             <ul>
