Almost complete chatroom implementation and wiring with server code

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <div id="game_panel" style="display: none; width:640px; height: 480px; background-color: green;">
             <canvas id="game_canvas" style="width: 100%; height: 100%;"></canvas>
             <div id="chat_display">
-                <input id="chat_input" type="text"></input>
-                <button id="chat_send_button"></button> 
+                <textarea id="chat_history" ></textarea>
+                <input id="chat_input" type="text" style="width:100%;"></input>
+                <button id="chat_send_button">Send</button>
             </div>
         </div>
     </div>    
