--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     </head>
 <body style="background-color:whitesmoke">
-    <div><h2>This is klaim's multiplayer js game prototype, yay!</h2></div>
+    <div><h2>This is klaim's multiplayer js game work in progress, yay!</h2></div>
     <div id="online_info" style="display: none; position:absolute; top:8px; right:8px; max-width: 300px; background-color: honeydew">
         <div id="online_info_box" style="display:none;">
             <div style="float: right"> <a href='/admin'>admin access</a> </div>
