Half working mess - needs to be rewritten.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="game_panel" style="display: none; width:640px; height: 480px; background-color: green;">
             <canvas id="game_canvas" style="width: 100%; height: 100%;"></canvas>
             <div id="chat_display" style="width:100%;">
-                <textarea id="chat_history" style="width:100%;"></textarea>
+                <div id="chat_history" style="width:100%;"></div>
                 <input id="chat_input" type="text" style="width:100%;"></input>
                 <button id="chat_send_button">Send</button>
             </div>
